<resources>
    <!--app name-->
    <string name="app_name">SemiColon</string>

    <!--single words-->
    <string name="word_back">back</string>
    <string name="word_next">next</string>
    <string name="word_finish">finish</string>
    <string name="word_button">button</string>
    <string name="word_settings">settings</string>
    <string name="word_home">home</string>
    <string name="word_events">events</string>
    <string name="word_friends">friends</string>

    <!--cities-->
    <string name="city_melbourne">Melbourne</string>

    <!--Countries-->
    <string name="country_australia">Australia</string>

    <!--number-->
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>

    <!--symbols-->
    <string name="symbol_semicolon">;</string>

    <!--phrases-->
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="enter_your_password">enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">remember me</string>
    <string name="sign_in">sign in</string>
    <string name="create_an_account">create an account</string>
    <string name="enter_your_email_or_username">enter your email or username</string>
    <string name="agree_with_terms">I AGREE WITH TERMS OF AGREEMENT</string>
    <string name="terms_and_conditions">As a condition of use, you promise not to use the Services for any purpose that
        is unlawful or prohibited by these Terms, or any other purpose not reasonably intended by 500px. By way of
        example, and not as a limitation, you agree not to use the Services:
        \n\nTo abuse, harass, threaten, impersonate or intimidate any person;
        \n\nTo post or transmit, or cause to be posted or transmitted, any Content that is libelous, defamatory,
        obscene, pornographic, abusive, offensive, profane, or that infringes any copyright or other right of any
        person;
        \n\nTo communicate with 500px representatives or other users in an abusive or offensive manner;
        \n\nFor any purpose (including posting or viewing Content) that is not permitted under the laws of the
        jurisdiction where you use the Services;
        \n\nTo post or transmit, or cause to be posted or transmitted, any Communication designed or intended to obtain
        password, account, or private information from any 500px user;
        \n\nTo create or transmit unwanted ‘spam’ to any person or any URL;
        \n\nTo create multiple accounts for the purpose of voting for or against users’ Visual Content;
        \n\nTo post copyrighted Content that does not belong to you, unless you are commenting on Visual Content in
        Blogs, where you may post such Content subject to providing appropriate attribution to the copyright owner and a
        link to the source of the Content;
        \n\nWith the exception of accessing RSS feeds, you agree not to use any robot, spider, scraper or other
        automated means to access the Site for any purpose without our express written permission. Additionally, you
        agree that you will not: (i) take any action that imposes, or may impose in our sole discretion an unreasonable
        or disproportionately large load on our infrastructure; (ii) interfere or attempt to interfere with the proper
        working of the Site or any activities conducted on the Site; or (iii) bypass any measures we may use to prevent
        or restrict access to the Site;
        \n\nTo artificially inﬂate or alter vote counts, blog counts, comments, or any other Service or for the purpose
        of giving or receiving money or other compensation in exchange for votes and/or in an attempt to alter the
        result of any contest or promotion, or for participating in any other organized effort that in any way
        artificially alters the results of Services;
        \n\nTo advertise to, or solicit, any user to buy or sell any third party products or services, or to use any
        information obtained from the Services in order to contact, advertise to, solicit, or sell to any user without
        their prior explicit consent;
        \n\nTo promote or sell Visual Content of another person unless you are expressly authorized to do so; or
        \n\nTo sell, assign or otherwise transfer your profile.
    </string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">notifications</string>
    <string name="user_placeholder">%s %s</string>>"
    <string name="phrase_in_progress">in progress</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">logout</string>
    <string name="title_events">events</string>
    <string name="test_location">Location: Melbourne, Australia</string>
    <string name="test_email">Email: email@gmail.com</string>
    <string name="test_phone_number">+61(949)808 570</string>
    <string name="phrase_current_password">current password</string>
    <string name="phrase_new_password">new password</string>
    <string name="phrase_repeat_password">repeat password</string>
    <string name="word_submit">submit</string>
    <string name="word_english">english</string>
    <string name="word_spanish">spanish</string>
    <string name="phrase_report_a_problem">report a problem</string>
    <string name="number_five">5</string>
    <string name="word_followers">followers</string>
    <string name="word_following">following</string>
    <string name="phrase_phone_number">phone number</string>
    <string name="word_password">password</string>
    <string name="phrase_first_word">first name</string>
    <string name="phrase_last_name">last name</string>
    <string name="word_city">city</string>
    <string name="word_country">country</string>
    <string name="phrase_email_not_required">email (not required)</string>
    <string name="email_gmail">email@gmail.com</string>
    <string name="phone_number">+#(###)### ###</string>
    <string name="title_activity_followers_fragment">FollowersFragment</string>
    <string name="title_activity_new_followers_fragment">NewFollowersFragment</string>
    <string name="title_activity_followers">FollowersActivity</string>
    <string name="phrase_password">password</string>
    <string name="phrase_confirm_password">confirm password</string>
    <string name="word_login">Login</string>
    <string name="phrase_create_an_account"><u>New Here? Sign Up Here</u></string>
    <string name="title_activity_bottom_navigation__test">Bottom_navigation_Test</string>
    <string name="title_home">Home</string>
    <string name="search_edittext_list"><![CDATA[> search]]></string>
    <string name="username_word">username</string>
    <string name="phrase_item_image">Item Image</string>
    <string name="symbol_triple_dash">---</string>

    <string name="event_date_or_time">%s---%s</string>
    <string name="event_max_attendees">%d / %d</string>

</resources>