<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BLACK"
        tools:context=".Login">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:hint="@string/phrase_phone_number"
            android:textColorHint="@color/GREY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/createBut"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintVertical_bias="0.39">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/userName"
                android:layout_height="wrap_content"
                android:layout_width="322dp"
                android:inputType="text"
                android:backgroundTint="@color/GREY"
                android:maxLines="1"
                android:textColorHint="@color/GREY"
                android:textColor="@color/WHITE"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:hint="@string/word_password"
            android:textColorHint="@color/GREY"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/layout1"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.493">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_height="wrap_content"
                android:layout_width="322dp"
                android:inputType="textPassword"
                android:backgroundTint="@color/GREY"
                android:maxLines="1"
                android:textColorHint="@color/GREY"
                android:textColor="@color/WHITE"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/create_an_account"
            android:background="@drawable/reg_square"
            android:textColor="@color/WHITE"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:id="@+id/createBut"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_square"
            android:textColor="@color/WHITE"
            android:textSize="22sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:id="@+id/logBut"
            app:layout_constraintEnd_toStartOf="@+id/forgotBut"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.529"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/checkLogin"/>

    <Button
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_square"
            android:textColor="@color/WHITE"
            android:textSize="22sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:id="@+id/forgotBut"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/checkLogin"/>

    <TextView
            android:text="@string/not_registered_yet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/createBut"/>

    <CheckBox
            android:text="@string/remember_me"
            android:textColor="@color/WHITE"
            android:textSize="22sp"
            android:buttonTint="@color/WHITE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="44dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/layout2"/>

</android.support.constraint.ConstraintLayout>