<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BLACK"
        tools:context=".SettingParamsFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/name_text"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@color/WHITE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/name_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp">

            <TextView
                    android:textColor="@color/WHITE"
                    android:textSize="18sp"
                    android:text="@string/phrase_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/current_password"
                    android:textSize="22sp"
                    android:textColor="@color/WHITE"
                    android:textCursorDrawable="@drawable/black_cursor"
                    android:backgroundTint="@color/WHITE"
                    android:textColorHint="#CAC2C2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    tools:ignore="Autofill,LabelFor"
                    android:inputType="textPassword"/>

            <TextView
                    android:textColor="@color/WHITE"
                    android:textSize="18sp"
                    android:text="@string/phrase_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/new_password"
                    android:textSize="22sp"
                    android:textColor="@color/WHITE"
                    android:textCursorDrawable="@drawable/black_cursor"
                    android:backgroundTint="@color/WHITE"
                    android:textColorHint="#CAC2C2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    tools:ignore="Autofill,LabelFor"
                    android:inputType="textPassword"/>

            <TextView
                    android:textColor="@color/WHITE"
                    android:textSize="18sp"
                    android:text="@string/phrase_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/repeat_password"
                    android:textSize="22sp"
                    android:textColor="@color/WHITE"
                    android:textCursorDrawable="@drawable/black_cursor"
                    android:backgroundTint="@color/WHITE"
                    android:textColorHint="#CAC2C2"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="12dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill,LabelFor"
                    android:inputType="textPassword"/>

            <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/reg_square"
                    android:gravity="center"
                    android:text="@string/word_submit"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/WHITE"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/notification_layout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/name_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp">

            <android.support.v7.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:checked="true"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_notifications"
                    android:textSize="22sp"
                    android:padding="8dp"
                    android:textColor="@color/WHITE"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>