<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/BLACK"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_frag"
        tools:context=".MainFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

        <LinearLayout
                android:background="@drawable/gradient_background"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/settings_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/reg_square"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:layout_alignParentEnd="true"
                        android:visibility="visible"
                        android:text="@string/word_settings"
                        android:textSize="22sp"
                        android:textColor="@color/WHITE"/>

            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/burns"/>

            <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/name"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="21sp"/>

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_red">

            <LinearLayout
                    android:id="@+id/linear_layout_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                        android:text="@string/word_followers"
                        android:textSize="19sp"
                        android:textColor="@color/BLACK"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:id="@+id/followers_word"/>

                <TextView
                        android:text="@string/number_zero"
                        android:textSize="22sp"
                        android:textColor="@color/BLACK"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:id="@+id/followers_number"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/linear_layout_following"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@+id/linear_layout_followers"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                        android:text="@string/word_following"
                        android:textSize="19sp"
                        android:textColor="@color/BLACK"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:id="@+id/following_word"/>

                <TextView
                        android:text="@string/number_zero"
                        android:textSize="22sp"
                        android:textColor="@color/BLACK"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:id="@+id/following_number"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout3">

                <TextView
                        android:text="@string/word_events"
                        android:textSize="19sp"
                        android:textColor="@color/BLACK"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:id="@+id/textView5"/>

                <TextView
                        android:text="@string/number_zero"
                        android:textSize="22sp"
                        android:textColor="@color/BLACK"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:id="@+id/textView7"/>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_location"
                    android:textColor="@color/WHITE"
                    android:textSize="21sp"
                    android:padding="16dp"/>

            <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Phone: +#(###)### ###"
                    android:textColor="@color/WHITE"
                    android:textSize="21sp"
                    android:padding="16dp"
                    tools:ignore="HardcodedText"/>

            <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_email"
                    android:textColor="@color/WHITE"
                    android:textSize="21sp"
                    android:padding="16dp"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>